<resources>
    <string name="title_activity_maps">Map</string>

    <string name="app_name">كوفيرة</string>
    <string name="Home">الرئيسية</string>
    <string name="sche">المواعيد المجدولة</string>
    <string name="offers">عروض كوفيرة</string>
    <string name="complain">الشكاوي والمقترحات</string>
    <string name="last"> الطلبات المقترحة </string>
    <string name="contact">تواصل معنا</string>
    <string name="about">عن كوفيرة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="invalid_email_password">برجاء التأكد من صحة البيانات</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="permission_required_toast">اذونات الموقع مطلوبة لهذا التطبيق</string>
    <string name="location_permission_denied">اذونات الموقع مطلوبة لتحديد مكانك واقرب الكوفيرات</string>
    <string name="permission_rationale_location">اذونات الموقع مطلوبة ليعمل التطبيق بشكل سليم</string>
    <string name="default_time">اختر الوقت المناسب</string>
    <string name="default_date">اختر اليوم المناسب</string>
    <string name="choose_date">برجاء اختيار اليوم المناسب</string>
    <string name="choose_time">برجاء ادخال التوقيت المناسب</string>
    <string name="menu_orders">Orders</string>
    <string name="permission_read_external_storage">السماح بالوصول للذاكرة لاختيار صورة الملف الشخصي</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="tab_text_1">الحالية</string>
    <string name="tab_text_2">السابقة</string>
    <string name="permission_call_required_toast">برجاء الموافقة على اجراء مكالمة</string>
    <string name="verify_text1">الهوية</string>
    <string name="verify_text2">الشهادات</string>
    <string name="terms"><u>لمراجعة الشروط والأحكام</u></string>
    <string name="reviewing">سيتم مراجعة البيانات\n من قبل الإدارة والرد عليكم\n في أقرب وقت بالقبول أو الرفض</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_kwafira_home">KwafiraHomeActivity</string>
    <string name="title_activity_kwafira_main">KwafiraMainActivity</string>
    <string name="title_activity_kwafira_maps">Map</string>
    <string name="error_message_failed">لم يتم ارسال الرسالة</string>
    <string name="error_empty_message">لا يمكن ارسال رسالة فارغة</string>
    <string name="default_notification_channel_id">kwafira_channel</string>
    <string name="channel_name">KwafiraCH</string>
    <string name="channel_description">this is kwafira channel</string>
    <string name="wrong_email">برجاء ادخال البريد الالكتروني بشكل صحيح</string>
    <string name="alert">تنبية هام</string>
    <string name="cancel_msg">هل أنت متأكد من الغاء الحجز؟</string>
    <string name="confirm_cancel">تأكيد الإلغاء</string>
    <string name="order">حجز #</string>
    <string name="at">\"الساعة \"</string>
    <string name="pendingOrder">طلبات قيد التنفيذ  (1)</string>
    <string name="orderNum">\"رقم الطلب   \"</string>
    <string name="wrong_cert">برجاء ادخال صورة الشهادة بشكل صحيح</string>
    <string name="wrong_name">برجاء ادخال الاسم بشكل صحيح</string>
    <string name="remainingtime">\"الوقت المتبقى للارسال مرة اخرى \"</string>
    <string name="title_activity_map2">MapActivity2</string>
    <string name="wrongInfo">معلومات الدخول خاطئة</string>
    <string name="cancelled">تم الالغاء</string>
    <string name="searching_kwafira">جاري البحث عن كوافيرة</string>
    <string name="startService">تم بدء الخدمة</string>
    <string name="stopService">تم انتهاء الخدمة</string>
    <string name="orderStoped">تم انتهاء الطلب</string>
    <string name="newMsg">لديك رسالة جديدة</string>
    <string name="delete"> ×  احذف</string>
    <string name="riyyal"> ريال</string>
    <string name="done">تم ارسال الرسالة</string>
    <string name="no_rate">لا يوجد تقييم بعد</string>
    <string name="suc_rate">تم التقييم بنجاح</string>
    <string name="kwafiraAssigned">تم قبول طلبك بواسطة كوفيرة</string>
    <string name="kwafiraAssignedBody">توقعي وصول الكوفيرة خلال ٣٠ دقيقة</string>
    <string name="phonenumber">رقم الهاتف</string>
</resources>
