<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_kwafira">

    <fragment
        android:id="@+id/nav_home_kwafira"
        android:name="com.almusand.kawfira.kwafira.home.ui.home.HomeKwafiraFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.almusand.kawfira.kwafira.home.ui.previous_orders.PreviousOrders"
        android:label="    الطلبات المجدولة"
        tools:layout="@layout/old_order_kwafira" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.almusand.kawfira.ui.main.ui.suggestions.SuggestionsFragment"
        android:label="@string/menu_suggestions"
        tools:layout="@layout/fragment_suggestions" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.almusand.kawfira.ui.main.ui.settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.almusand.kawfira.ui.main.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.almusand.kawfira.ui.main.ui.about.AboutUsFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_aboutus" />
</navigation>